finally got recipes-api spring mongoclient to use the docker container instead of default.